abstract and body reviewed and revised

--- a/document/source/abstract.tex
+++ b/document/source/abstract.tex
@@ -2,9 +2,10 @@ Safety and mission performance validation of autonomous vehicles is a major chal
 %
 An assertion library has been derived from the UK Highway Code (UKHC), as an example of a legal code of practice. 
 %
-Transformation of UKHC rules into logical assertions can be achieved either by direct translation or by physical modelling, to yield logical assertion expressions.
+Transformation of UKHC rules into assertions can be achieved either by direct translation or by physical modelling, to yield formal logical expressions that can be monitored automatically.
 %
-To validate the effectiveness of the assertion library we have performed assertion checking of the UKHC rules using a geospatial information system in an SQL database.\todo[inline]{``validation suite'' only occurs in abstract?}
+The approach is illustrated on the example of assertion checking for vehicle overtaking, using a geospatial information system in an SQL database for validation and performance assessment.
 %
-This paper presents initial simulation and realtime video analysis experiments that apply assertions related to vehicle overtaking, and a brief analysis of the safety and mission performance characteristics measured.
-\todo[inline]{What are the contributions? More detail on scope (focus on overtaking to illustrate the approach as we don't yet have a ``library''.}
+We present initial simulation and realtime video analysis experiments that apply assertions relevant in a vehicle overtaking scenario together with a brief analysis of the safety and mission performance characteristics measured.
+%
+\todo[inline]{Highlight conclusions/contributions?}
